--- a/index.html
+++ b/index.html
@@ -5,104 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jogo da Forca</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    .mask-outline {
-      fill: transparent;
-      stroke: #a855f7;
-      stroke-width: 2.5;
-      visibility: hidden;
-    }
-
-    .mask-led {
-      stroke: #a855f7;
-      stroke-width: 2.5;
-      fill: none;
-      visibility: hidden;
-    }
-
-    .mask-glow {
-      stroke: #a855f7;
-      animation: brilharMascara 1.2s ease-in-out infinite;
-    }
-
-    @keyframes brilharMascara {
-      0% { opacity: 1; stroke-width: 2.5; }
-      50% { opacity: 0.4; stroke-width: 3.5; }
-      100% { opacity: 1; stroke-width: 2.5; }
-    }
-
-    .part {
-      visibility: hidden;
-    }
-
-    .part.show {
-      visibility: visible;
-    }
-  </style>
 </head>
-<body class="sombrio">
+<body>
 
   <div id="contextual-hint"></div>
 
-  <!-- Escolha de tema -->
-  <div id="theme-select">
-    <h2>Escolha o tema:🕯️</h2>
-    <div class="tema-botoes">
-      <button class="theme-btn" data-tema="animal">Animal 🐶</button>
-      <button class="theme-btn" data-tema="cantores">Cantores 🎤</button>
-      <button class="theme-btn" data-tema="comida">Comida 🍔</button>
-      <button class="theme-btn" data-tema="filmes">Filmes 🎬</button>
-      <button class="theme-btn" data-tema="objeto">Objeto 🧰</button>
-      <button class="theme-btn" data-tema="pais">País 🌍</button>
-      <button class="theme-btn" data-tema="profissoes">Profissões 👩‍⚕️</button>
-    </div>
+  <div id="character-select">
+    <h2>Escolha seu personagem:</h2>
+    <button id="girl">👧 Menina</button>
+    <button id="boy">👦 Menino</button>
   </div>
 
-  <!-- Área principal do jogo -->
   <div class="app">
     <header>
       <h1>Forca</h1>
       <div class="stats">
         <div>🎯 <b id="category">Geral</b></div>
-        <div>❤️ Chances: <b id="lives">10</b></div>
+        <div>❤️ Chances: <b id="lives">8</b></div>
       </div>
     </header>
 
     <div class="board">
-      <!-- Painel da forca -->
       <div class="panel">
-        <svg class="gallows" viewBox="0 0 400 300" aria-label="Forca">
-          <!-- Estrutura da forca -->
-          <line x1="100" y1="250" x2="300" y2="250" stroke="#444" stroke-width="6"/>
-          <line x1="150" y1="250" x2="150" y2="50" stroke="#444" stroke-width="6"/>
-          <line x1="150" y1="50" x2="190" y2="50" stroke="#444" stroke-width="6"/>
-          <line x1="190" y1="50" x2="190" y2="70" stroke="#444" stroke-width="4"/>
-
-          <!-- 1. Cabeça com capuz -->
-          <path id="p0" class="part mask-outline" d="M190 70 C160 90, 150 130, 160 180 C165 210, 180 240, 190 250 C200 240, 215 210, 220 180 C230 130, 220 90, 190 70 Z"/>
-
-          <!-- 2. Olhos em X -->
-          <path id="p1" class="part mask-led" d="M178 110 L182 114 M182 110 L178 114"/>
-          <path id="p2" class="part mask-led" d="M198 110 L202 114 M202 110 L198 114"/>
-
-          <!-- 3. Nariz -->
-          <path id="p3" class="part mask-led" d="M185 130 Q190 135 195 130"/>
-
-          <!-- 4. Boca -->
-          <path id="p4" class="part mask-led" d="M180 150 Q190 170 200 150 Q190 160 180 150 Z"/>
-
-          <!-- 5. Tronco com capa -->
-          <path id="p5" class="part" d="M160 180 Q190 230 220 180" fill="#111" stroke="#eee" stroke-width="2"/>
-
-          <!-- 6. Manga esquerda -->
-          <path id="p6" class="part" d="M150 180 Q160 200 170 180" fill="#111" stroke="#eee" stroke-width="2"/>
-
-          <!-- 7. Manga direita -->
-          <path id="p7" class="part" d="M210 180 Q220 200 230 180" fill="#111" stroke="#eee" stroke-width="2"/>
+        <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
+          <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
+          <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
+          <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
+          <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
+          <circle class="part" id="p0" cx="190" cy="95" r="25"/>
+          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
+          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
+          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
+          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
+          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
+          <path class="part" id="p6" d=""/>
+          <path class="part" id="p7" d=""/>
         </svg>
       </div>
 
-      <!-- Painel de interação -->
       <div class="panel">
         <div class="word" id="word"></div>
         <div class="hint" id="hint"></div>
@@ -110,6 +50,7 @@
 
         <div class="actions">
           <button class="btn" id="shuffle">Outra palavra</button>
+          <button class="btn primary" id="reset">Reiniciar</button>
         </div>
 
         <div class="status" id="status"></div>
@@ -117,47 +58,17 @@
     </div>
   </div>
 
-  <!-- Tela de derrota -->
   <div id="death-scene">
     <div class="blood"></div>
     <div class="death-message">“Não é pessoal. É a lei.”</div>
     <button id="try-again-loss" class="btn">Tente novamente</button>
   </div>
 
-  <!-- Tela de vitória -->
   <div id="victory-scene">
     <div class="glow"></div>
     <div class="victory-message">“Escapou dessa vez”</div>
     <button id="try-again-win" class="btn">Tente novamente</button>
   </div>
-
-  <script>
-    function mostrarParteDaForca(erros) {
-      const ordem = [
-        ['p0'],                 // Cabeça com capuz
-        ['p1', 'p2'],           // Olhos em X
-        ['p3'],                 // Nariz
-        ['p4'],                 // Boca
-        ['p5'],                 // Tronco com capa
-        ['p6'],                 // Manga esquerda
-        ['p7']                  // Manga direita
-      ];
-
-      const partes = ordem[erros - 1];
-      if (!partes) return;
-
-      partes.forEach(id => {
-        const el = document.getElementById(id);
-        if (el) el.classList.add("show");
-      });
-    }
-
-    function ativarGlowDerrota() {
-      ['p1', 'p2', 'p3', 'p4'].forEach(id => {
-        document.getElementById(id)?.classList.add("mask-glow");
-      });
-    }
-  </script>
 
   <script src="script.js" defer></script>
 </body>
