--- a/index.html
+++ b/index.html
@@ -28,15 +28,18 @@
           <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
 
-          <!-- Partes do personagem -->
+          <!-- Corpo de palito -->
           <circle class="part" id="p0" cx="190" cy="95" r="25"/> <!-- cabeça -->
           <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/> <!-- tronco -->
           <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/> <!-- braço esquerdo -->
           <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/> <!-- braço direito -->
           <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/> <!-- perna esquerda -->
           <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/> <!-- perna direita -->
-          <path class="part" id="p6" d=""/> <!-- capuz -->
-          <path class="part" id="p7" d=""/> <!-- manto -->
+
+          <!-- Detalhes da caveira -->
+          <path class="part" id="p6" d=""/> <!-- olho esquerdo -->
+          <path class="part" id="p7" d=""/> <!-- olho direito -->
+          <path class="part" id="p8" d=""/> <!-- nariz -->
         </svg>
       </div>
 
