--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
 </head>
 <body>
 
+  <div id="contextual-hint"></div>
+
+  <div id="character-select">
+    <h2>Escolha seu personagem:</h2>
+    <button id="girl">👧 Menina</button>
+    <button id="boy">👦 Menino</button>
+  </div>
+
   <div class="app">
     <header>
-      <h1>Forca Sombria</h1>
+      <h1>Forca</h1>
       <div class="stats">
         <div>🎯 <b id="category">Geral</b></div>
         <div>❤️ Chances: <b id="lives">8</b></div>
@@ -20,22 +28,18 @@
     <div class="board">
       <div class="panel">
         <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
-          <!-- Estrutura da forca -->
           <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
-
-          <!-- Corpo de palito + acessórios -->
-          <circle class="part" id="p0" cx="190" cy="95" r="25"/> <!-- cabeça -->
-          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/> <!-- tronco -->
-          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/> <!-- braço esquerdo -->
-          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/> <!-- braço direito -->
-          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/> <!-- perna esquerda -->
-          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/> <!-- perna direita -->
-          <path class="part" id="p6" d="M180 85 Q190 75 200 85 Q190 95 180 85 Z"/> <!-- olho esquerdo -->
-          <path class="part" id="p7" d="M200 85 Q210 75 220 85 Q210 95 200 85 Z"/> <!-- olho direito -->
-          <path class="part" id="p8" d="M195 100 Q190 105 195 110 Q200 105 195 100 Z"/> <!-- nariz -->
+          <circle class="part" id="p0" cx="190" cy="95" r="25"/>
+          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
+          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
+          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
+          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220"/>
+          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220"/>
+          <path class="part" id="p6" d=""/>
+          <path class="part" id="p7" d=""/>
         </svg>
       </div>
 
@@ -52,18 +56,18 @@
         <div class="status" id="status"></div>
       </div>
     </div>
+  </div>
 
-    <div id="death-scene">
-      <div class="blood"></div>
-      <div class="death-message">“Não é pessoal. É a lei.”</div>
-      <button id="try-again-loss" class="btn">Tente novamente</button>
-    </div>
+  <div id="death-scene">
+    <div class="blood"></div>
+    <div class="death-message">“Não é pessoal. É a lei.”</div>
+    <button id="try-again-loss" class="btn">Tente novamente</button>
+  </div>
 
-    <div id="victory-scene">
-      <div class="glow"></div>
-      <div class="victory-message">“Escapou dessa vez”</div>
-      <button id="try-again-win" class="btn">Tente novamente</button>
-    </div>
+  <div id="victory-scene">
+    <div class="glow"></div>
+    <div class="victory-message">“Escapou dessa vez”</div>
+    <button id="try-again-win" class="btn">Tente novamente</button>
   </div>
 
   <script src="script.js" defer></script>
