--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 <body>
 
   <div id="contextual-hint"></div>
-
-  <div id="character-select">
-    <h2>Escolha seu personagem:</h2>
-    <button id="girl">👧 Menina</button>
-    <button id="boy">👦 Menino</button>
-  </div>
-
+  
   <div class="app">
     <header>
       <h1>Forca</h1>
@@ -32,7 +26,7 @@
           <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
           <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
-          <circle class="part" id="p0" cx="190" cy="95" r="25"/>
+          <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none"/>
           <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185"/>
           <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160"/>
           <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160"/>
