--- a/index.html
+++ b/index.html
@@ -21,32 +21,33 @@
 
     <div class="board">
       <div class="panel">
-        <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
-          <defs>
-            <filter id="blur">
-              <feGaussianBlur stdDeviation="2" />
-            </filter>
-          </defs>
+   <svg class="gallows" viewBox="0 0 300 300" aria-label="Forca">
+  <defs>
+    <radialGradient id="bloodGlow" cx="50%" cy="50%" r="50%">
+      <stop offset="0%" stop-color="#8b0000" stop-opacity="0.8" />
+      <stop offset="100%" stop-color="#000000" stop-opacity="0" />
+    </radialGradient>
+  </defs>
 
-          <!-- Estrutura da forca -->
-          <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
-          <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
+  <!-- Estrutura da forca -->
+  <line x1="20" y1="280" x2="160" y2="280" stroke="#6b7280" stroke-width="8"/>
+  <line x1="60" y1="280" x2="60" y2="40"  stroke="#6b7280" stroke-width="8"/>
+  <line x1="60" y1="40"  x2="190" y2="40"  stroke="#6b7280" stroke-width="8"/>
+  <line x1="190" y1="40" x2="190" y2="70"  stroke="#6b7280" stroke-width="6"/>
 
-          <!-- Sangue escorrendo por trás da cabeça -->
-          <path id="blood" d="M165 75 Q190 95 215 75 Q190 110 165 75 Z" fill="#8b0000" opacity="0.8" filter="url(#blur)" />
+  <!-- Poça de sangue com brilho (inicialmente oculta) -->
+  <circle id="blood-pool" cx="190" cy="95" r="35" fill="url(#bloodGlow)" style="display: none;" />
 
-          <!-- Cabeça e corpo -->
-          <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none" stroke="#e5e7eb" stroke-width="4"/>
-          <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185" stroke="#e5e7eb" stroke-width="4"/>
-          <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160" stroke="#e5e7eb" stroke-width="4"/>
-          <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160" stroke="#e5e7eb" stroke-width="4"/>
-          <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220" stroke="#e5e7eb" stroke-width="4"/>
-          <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220" stroke="#e5e7eb" stroke-width="4"/>
-          <path class="part" id="p6" d=""/>
-          <path class="part" id="p7" d=""/>
-        </svg>
+  <!-- Cabeça e corpo -->
+  <circle class="part" id="p0" cx="190" cy="95" r="25" fill="none" stroke="#e5e7eb" stroke-width="4"/>
+  <line class="part" id="p1" x1="190" y1="120" x2="190" y2="185" stroke="#e5e7eb" stroke-width="4"/>
+  <line class="part" id="p2" x1="190" y1="135" x2="165" y2="160" stroke="#e5e7eb" stroke-width="4"/>
+  <line class="part" id="p3" x1="190" y1="135" x2="215" y2="160" stroke="#e5e7eb" stroke-width="4"/>
+  <line class="part" id="p4" x1="190" y1="185" x2="170" y2="220" stroke="#e5e7eb" stroke-width="4"/>
+  <line class="part" id="p5" x1="190" y1="185" x2="210" y2="220" stroke="#e5e7eb" stroke-width="4"/>
+  <path class="part" id="p6" d=""/>
+  <path class="part" id="p7" d=""/>
+</svg>
       </div>
 
       <div class="panel">
